@@ -3,6 +3,8 @@ AT_INIT
 # define macros to skip a test if LoLA or Fiona was not found by configure
 m4_define(AT_CHECK_LOLA, [AT_CHECK([if test "LOLA" == "not found"; then exit 77; fi])])
 m4_define(AT_CHECK_FIONA, [AT_CHECK([if test "FIONA" == "not found"; then exit 77; fi])])
+AT_TESTED(versions.sh)
+
 
 ############################################################################
 AT_BANNER([Standard Options])
@@ -10,10 +12,12 @@ AT_BANNER([Standard Options])
 
 AT_SETUP([Help output])
 AT_CHECK([WENDY --help],0,ignore)
+AT_KEYWORDS(basic)
 AT_CLEANUP
 
 AT_SETUP([Version output])
 AT_CHECK([WENDY --version],0,ignore)
+AT_KEYWORDS(basic)
 AT_CLEANUP
 
 
@@ -177,6 +181,7 @@ AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/phcontrol3.unf.* .])
 AT_CHECK([WENDY phcontrol3.unf.owfn --fionaFormat --og --verbose],0,ignore,ignore)
 AT_CHECK([FIONA -tequivalence phcontrol3.unf.og phcontrol3.unf.fiona.og],0,ignore,ignore)
+AT_KEYWORDS(example)
 AT_CLEANUP
 
 AT_SETUP([Purchase Order Process])
@@ -185,6 +190,7 @@ AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/PO.* .])
 AT_CHECK([WENDY PO.owfn --fionaFormat --og --verbose],0,ignore,ignore)
 AT_CHECK([FIONA -tequivalence PO.og PO.fiona.og],0,ignore,ignore)
+AT_KEYWORDS(example)
 AT_CLEANUP
 
 AT_SETUP([Sequence])
@@ -193,6 +199,7 @@ AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/sequence10.* .])
 AT_CHECK([WENDY sequence10.owfn --fionaFormat --og --verbose],0,ignore,ignore)
 AT_CHECK([FIONA -tequivalence sequence10.og sequence10.fiona.og],0,ignore,ignore)
+AT_KEYWORDS(example)
 AT_CLEANUP
 
 AT_SETUP([SMTP Protocol])
@@ -201,6 +208,7 @@ AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/smtp3.* .])
 AT_CHECK([WENDY smtp3.owfn --fionaFormat --og --verbose],0,ignore,ignore)
 AT_CHECK([FIONA -tequivalence smtp3.og smtp3.fiona.og],0,ignore,ignore)
+AT_KEYWORDS(example)
 AT_CLEANUP
 
 AT_SETUP([Travel Service])
@@ -209,6 +217,7 @@ AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/T2.* .])
 AT_CHECK([WENDY T2.owfn --fionaFormat --og --verbose --messagebound=2],0,ignore,ignore)
 AT_CHECK([FIONA -tequivalence T2.og T2.fiona.og],0,ignore,ignore)
+AT_KEYWORDS(example)
 AT_CLEANUP
 
 AT_SETUP([ZEUS Seller Service])
@@ -217,4 +226,5 @@ AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/zeus.* .])
 AT_CHECK([WENDY zeus.owfn --fionaFormat --og --verbose],0,ignore,ignore)
 AT_CHECK([FIONA -tequivalence zeus.og zeus.fiona.og],0,ignore,ignore)
+AT_KEYWORDS(example)
 AT_CLEANUP
